# team-project95

./: .dockerignore  .env.enc  .env.example  .gitignore  .sops.yaml  AGENTS.md  INTEGRATION-TESTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  flake.nix  pom.xml  redocly.yaml
.github/workflows/: build_images.yml  ci.yml  deploy_azure.yml  deploy_kubernetes.yml  terraform_plan.yml  test_deploy_azure.yml  vm_operations.yml
api/: openapi-v1.yml
backend/: README.md
bruno-workspace/: README.md  workspace.yml
docs/: ARCHITECTURE_UPGRADE_RABBITMQ.md  api.html  architecture.md  database-schema.md  problem-statement.md  secrets.md
docs/weekly-updates/: 2026-06-02.md  2026-06-13.md  2026-06-20.md  2026-06-27.md  2026-07-11.md  2026-07-18.md  template.md
infra/: README.md  kubernetes-deployment-work-packages.md
infra/ansible/: README.md  deploy.yml  inventory.example.ini  inventory.ini  inventory.ini.j2  ops.yml
infra/helm/: deploy-helm.sh
infra/k8s/: README.md  deploy-k8s.sh  helmfile.yaml  ingress.yml  secrets.example.yaml
infra/prometheus/: alert_rules.yml  prometheus.yml
infra/scripts/: seed-source-endpoints.md  seed-source-endpoints.sh  source-endpoints.json
infra/terraform/: README.md  az-terraform-cheatsheet.md  (+6 more)
ingestion-service/: pom.xml
scripts/: generate-api-docs.sh  reclassify-research-areas.py  run-bruno-tests.sh  wait-for-health.sh
services/: .project  AGENTS.md  pom.xml
services/genai-service/: .gitignore  AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml
services/genai-service/tests/: test_app.py  test_contract.py
(+256 files in other folders)
