[project]
name = "genai-service"
version = "0.1.0"
description = "Minimal FastAPI + LangChain GenAI service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-ollama>=0.2.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
py-modules = ["app"]
